[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oeis-refined-atlas"
version = "0.1.0"
description = "Support code for refined bracelet atlas OEIS submissions"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Andrea Cutri" }]

[project.scripts]
oeis-refined-atlas = "oeis_refined_atlas.a396630:main"
oeis-a395436 = "oeis_refined_atlas.a395436:main"
oeis-a396051 = "oeis_refined_atlas.a396051:main"
oeis-a396085 = "oeis_refined_atlas.a396085:main"
oeis-a396229 = "oeis_refined_atlas.a396229:main"
oeis-a396575 = "oeis_refined_atlas.a396575:main"
oeis-a396630 = "oeis_refined_atlas.a396630:main"
oeis-a396631 = "oeis_refined_atlas.a396631:main"
oeis-a396632 = "oeis_refined_atlas.a396632:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]